--- a/#src/scss/index/case.scss
+++ b/#src/scss/index/case.scss
@@ -9,7 +9,7 @@
         margin: 0 auto;
     }
     &__text {
-        padding: 93px 0 0px 0;
+        padding: 25px 0 0 0;
         &-number {
             height: 18px;
             width: 55px;
