--- a/#src/scss/index/media.scss
+++ b/#src/scss/index/media.scss
@@ -259,6 +259,9 @@
     .skills__tabs {
         display: none;
     }
+    .info__stats {
+        margin: 151px 0 50px 0;
+    }
     .header__info-btn-container::after {
         display: none;
     }
