--- a/#src/scss/index/skills.scss
+++ b/#src/scss/index/skills.scss
@@ -32,7 +32,7 @@
             color: #171717;
         }
         &-number {
-            margin-top: 119px;
+            margin-top: 0;
             height: 18px;
             width: 55px;
             display: flex;
