--- a/#src/scss/mailing/new.scss
+++ b/#src/scss/mailing/new.scss
@@ -187,7 +187,7 @@
   .mail-new__text-controls .swiper-controls-mail .swiper-button-next::after {
     content: "⟶";
     font-size: 60px;
-    color: black;
+    color: #DC4139;
   }
   .mail-new__text-controls .swiper-controls-mail .swiper-button-prev::after {
     content: "⟵";
