--- a/#src/scss/ready/info.scss
+++ b/#src/scss/ready/info.scss
@@ -336,5 +336,5 @@
   .rea-info__stats-img-controls .swiper-controls .swiper-button-prev::after {
     content: "⟵";
     font-size: 60px;
-    color: black;
+    color: #DC4139;
   }
