--- a/#src/scss/rec/price.scss
+++ b/#src/scss/rec/price.scss
@@ -84,7 +84,8 @@
                 max-width: 361px;
                 max-height: 518px;
                 background: #1B1B1B;
-                transform: scale(1.1, 1.15) ;
+                transform: scale(1.1, 1.15);
+                border: none;
                 .rec-price__block-key {
                     color: #fff;
                     margin-top: 33px;
