--- a/#src/scss/detail/mobile.scss
+++ b/#src/scss/detail/mobile.scss
@@ -49,6 +49,7 @@
             color: #9C9C9C;
         }
         &-image {
+            margin: 60px 0 0 0;
             width: 220px;
             height: 408px;
             & img {
