--- a/#src/scss/optimization/new.scss
+++ b/#src/scss/optimization/new.scss
@@ -188,7 +188,7 @@
   .opt-new__text-controls .swiper-controls-opt .swiper-button-next::after {
     content: "⟶";
     font-size: 60px;
-    color: black;
+    color: #DC4139;
   }
   .opt-new__text-controls .swiper-controls-opt .swiper-button-prev::after {
     content: "⟵";
