--- a/#src/scss/ready/new.scss
+++ b/#src/scss/ready/new.scss
@@ -189,7 +189,7 @@
   .rea-new__text-controls .swiper-controls-rea .swiper-button-next::after {
     content: "⟶";
     font-size: 60px;
-    color: black;
+    color: #DC4139;
   }
   .rea-new__text-controls .swiper-controls-rea .swiper-button-prev::after {
     content: "⟵";
