--- a/#src/scss/seo/new.scss
+++ b/#src/scss/seo/new.scss
@@ -116,7 +116,9 @@
     }
 }
 
-
+.newSeo .swiper-button-next::after {
+  color: #DC4139;
+}
 .newSeo .swiper-container {
     width: 100%;
     height: 130%;
@@ -144,7 +146,7 @@
   .newSeo .swiper-slide-next {
     width: 378px;
     height: 279px;
-      transition: 0.5s ease;
+      transition: 1.5s ease;
       margin: auto;
       background-color: transparent;
       border: 1px solid #949494;
@@ -164,12 +166,16 @@
   .newSeo .swiper-slide-active {
     width: 378px;
     height: 398px;
-    transition: 0.5s ease;
+    transition: 1.5s ease;
     background-color: #000
 }
+.newSeo .swiper-wrapper {
+  display: flex;
+  align-items: center;
+}
 .newSeo .wrapper {
-    display: flex;
-    align-items: center;
+  display: flex;
+  align-items: center;
 }
   .seo-new__text-controls {
       position: relative;
@@ -187,7 +193,7 @@
   .seo-new__text-controls .swiper-controls-seo .swiper-button-next::after {
     content: "⟶";
     font-size: 60px;
-    color: black;
+    color: #DC4139;
   }
   .seo-new__text-controls .swiper-controls-seo .swiper-button-prev::after {
     content: "⟵";
@@ -212,7 +218,7 @@
   .seo-new__text-controls-media .swiper-controls-seo .swiper-button-next::after {
     content: "⟶";
     font-size: 60px;
-    color: black;
+    color: #DC4139;
   }
   .seo-new__text-controls-media .swiper-controls-seo .swiper-button-prev::after {
     content: "⟵";
